<resources>
    <string name="app_name">EntertainmentCenter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="movies">Movies</string>
    <string name="video_games">Video Games</string>
    <string name="board_games">Board Games</string>

    <string name="title_movie_fragment">Movies</string>

    <string name="title_video_game_fragment">Video Games</string>
    <string name="title_board_game_fragment">Board Games</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."    </string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="sign_me_up">Sign Me Up!</string>
    <string name="cancel_sign_up">Cancel Sign Up</string>
    <string name="be_app_id">5785D234-CBAF-DC55-FF9D-FA16194ECC00</string>
    <string name="be_android_api_key">0B01ACA2-DD3E-447A-FF27-7A642EAC4F00</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered a valid email address, password, and name.</string>
    <string name="logging_in_message">"Logging in..."</string>
    <string name="progress_title">Please Wait!</string>
    <string name="creating_new_account_message">"Creating a new account..."</string>
    <string name="empty_field_login_error">Be sure you have entered a valid email addres and password.</string>
    <string name="password_length_error">Your password must be at least 6 characters long.</string>
    <string name="password_email_same_error">Your email and password cannot be the same.</string>
    <string name="invalid_email_format_error">The entered email was in the incorrect format.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="create_a_new_entertainment_item">Create a new entertainment item</string>
    <string name="edit_an_entertainment_item">Edit an entertainment item</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_item">Save Item</string>
    <string name="saving">Saving...</string>
    <string name="snack_bar_text">Deleted item!</string>
    <string name="snack_bar_undo">Undone</string>
    <string-array name="entertainment_items">
        <item>Movie</item>
        <item>Video Game</item>
        <item>Board Game</item>
    </string-array>
</resources>
