<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_video_games"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/video_games"
            tools:icon="@drawable/ic_videogame_asset_black_24dp" />
        <item
            android:id="@+id/nav_board_games"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/board_games" />
    </group>
</menu>
